core/machine-check/tests/cases/02-unsupported-item.stderr
error: machine-check: Item kind not supported
 --> tests/cases/02-unsupported-item.rs:5:5
  |
5 |     type B = A;
  |     ^^^^
