core/machine-check/tests/cases/02-unsupported-item.rs
#[machine_check_macros::machine_description]
mod machine {
    struct A {}

    type B = A;
}

fn main() {}
